src/objects/ints__EfxReport_Bank_Account__c.object
<CustomObject>
    <fields>
        <fullName>ints__AccountNumber__c</fullName>
        <label>AccountNumber</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__CustomerNumber__c</fullName>
        <label>CustomerNumber</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__DateOpened__c</fullName>
        <label>DateOpened</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__EfxReport__c</fullName>
        <label>EfxReport</label>
        <referenceTo>ints__EfxReport__c</referenceTo>
        <relationshipLabel>EfxReport Bank Accounts</relationshipLabel>
        <relationshipName>EfxReport_Bank_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__FigureAmount__c</fullName>
        <label>FigureAmount</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__NumberOfNSF__c</fullName>
        <label>NumberOfNSF</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__code__c</fullName>
        <label>code</label>
        <length>2</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__description__c</fullName>
        <label>description</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>EfxReport Bank Account</label>
    <nameField>
        <displayFormat>EFX-BANK-ACC-{0000000000}</displayFormat>
        <label>EfxReport Bank Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EfxReport Bank Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>